--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -40,3 +40,17 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
     min-height: 100%;
     text-align: center;
 }
+.videoDiv{
+  width:100%;
+  height:0px;
+  position:relative;
+  padding-bottom:56.250%;
+}
+.videoStyle{
+  width:100%;
+  height:100%;
+  position:absolute;
+  left:0px;
+  top:0px;
+  overflow:hidden;
+}
